# monad-logger-katip

./: monad-logger-katip.cabal
