Name:          monad-logger-katip
Version:       0.0.0.0
Synopsis:      A Katip handler for MonadLogger
Description:
  This library provides some bridging code between the monad-logger and Katip
  packages.
Category:      Logging
Stability:     alpha

Author:        Nicolas Trangez
Maintainer:    ikke@nicolast.be
Copyright:     Copyright (C) 2017 Nicolas Trangez
License:       Apache-2.0
License-File:  LICENSE
Homepage:      https://github.com/haskell-service/monad-logger-katip
Bug-Reports:   https://github.com/haskell-service/monad-logger-katip/issues

Cabal-Version: >= 1.8
Build-Type:    Simple

Extra-Source-Files:
  README.md

Source-Repository head
  Type:     git
  Location: https://github.com/haskell-service/monad-logger-katip.git

Library
  Build-Depends:   base >= 4.9 && < 4.11
                 , conduit-extra >= 1.1 && < 1.2
                 , exceptions >= 00.8 && < 0.9
                 , fast-logger >= 2.4 && < 2.5
                 , katip >= 0.5 && < 0.6
                 , mmorph >= 1.0 && < 1.2
                 , monad-logger >= 0.3 && < 0.4
                 , monad-control >= 1.0 && < 1.1
                 , mtl >= 2.2 && < 2.3
                 , primitive >= 0.6 && < 0.7
                 , resourcet >= 1.1 && < 1.2
                 , text >= 1.2 && < 1.3
                 , transformers >= 0.5 && < 0.6
                 , transformers-base >= 0.4 && < 0.5
  Exposed-Modules: Control.Monad.Logger.Katip
                 , Control.Monad.Logger.Katip.Orphans
  Hs-Source-Dirs:  src
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g

Test-Suite monad-logger-katip-test
  Type:            exitcode-stdio-1.0
  Main-Is:         Main.hs
  Other-Modules:   Control.Monad.Logger.Katip.Orphans.Test
                 , Control.Monad.Logger.Katip.Test
                 , Control.Monad.Logger.Katip.Test.ShouldNotTypecheck
                 , Utils
  Build-Depends:   aeson >= 1.1 && < 1.3
                 , base >= 4.9 && < 4.11
                 , katip >= 0.5 && < 0.6
                 , lifted-async >= 0.9 && < 0.10
                 , monad-logger >= 0.3 && < 0.4
                 , mtl >= 2.2 && < 2.3
                 , should-not-typecheck >= 2.1 && < 2.2
                 , stm >= 2.4 && < 2.5
                 , tasty >= 0.11 && < 0.12
                 , tasty-hspec >= 1.1 && < 1.2
                 , text >= 1.2 && < 1.3
                 , monad-logger-katip
  Hs-Source-Dirs:  test
  Ghc-Options:     -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -Wredundant-constraints -g -threaded
